tests/ui/traits/non_lifetime_binders/type-match-with-late-bound.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/type-match-with-late-bound.rs:6:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0309]: the placeholder type `F` may not live long enough
  --> $DIR/type-match-with-late-bound.rs:8:1
   |
LL |   async fn walk2<'a, T: 'a>(_: T)
   |   ^              -- the placeholder type `F` must be valid for the lifetime `'a` as defined here...
   |  _|
   | |
LL | | where
LL | |     for<F> F: 'a,
   | |_________________^ ...so that the type `F` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/type-match-with-late-bound.rs:10:15
   |
LL |     for<F> F: 'a,
   |               ^^
help: consider adding an explicit lifetime bound
   |
LL |     for<F> F: 'a, F: 'a
   |                   +++++

error[E0309]: the placeholder type `F` may not live long enough
  --> $DIR/type-match-with-late-bound.rs:11:1
   |
LL | async fn walk2<'a, T: 'a>(_: T)
   |                -- the placeholder type `F` must be valid for the lifetime `'a` as defined here...
...
LL | {}
   | ^^ ...so that the type `F` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL |     for<F> F: 'a, F: 'a
   |                   +++++

error[E0309]: the placeholder type `F` may not live long enough
  --> $DIR/type-match-with-late-bound.rs:11:1
   |
LL | async fn walk2<'a, T: 'a>(_: T)
   |                -- the placeholder type `F` must be valid for the lifetime `'a` as defined here...
...
LL | {}
   | ^^ ...so that the type `F` will meet its required lifetime bounds
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider adding an explicit lifetime bound
   |
LL |     for<F> F: 'a, F: 'a
   |                   +++++

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0309`.
